--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,11 @@
   },
   "homepage": "https://github.com/helenhua9600/leetcode_tracker#readme",
   "dependencies": {
-    "express": "^4.21.2"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.12.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
